--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.4",
+    "method-override": "^3.0.0",
+    "mongoose": "^8.10.1",
+    "node-schedule": "^2.1.1",
     "nodemon": "^3.1.7",
-    "shortid": "^2.2.16",
+    "qrcodejs": "^1.0.0",
+    "shortid": "^2.2.17",
     "uuid": "^11.0.3"
   }
 }
